--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,13 @@
   status = 200
   force = true
 
+[[headers]]
+  for = "/*"
+    [headers.values]
+      Access-Control-Allow-Origin = "https://gradiannote.com/"
+      Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept"
+      Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+
+
 [build]
   functions = "/functions"
