--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
 [[headers]]
   for = "/*"
     [headers.values]
-      Access-Control-Allow-Origin = "https://gradiannote.com/"
+      Access-Control-Allow-Origin = "https://gradiannote.com"
       Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept"
       Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
 
