--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "babel src -d dist",
+    "build": "./node_modules/.bin/babel src -d dist",
     "dev": "nodemon index.js"
   },
   "license": "MIT",
